apps/iot/mosquitto/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  namespace: iot
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
  - name: http
    protocol: TCP
    port: 1883
    targetPort: 1883
    nodePort: 31883
