apps/iot/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 1883
      targetPort: 1883
      nodePort: 31883
