apps/iot/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-cluster-issuer
spec:
  ingressClassName: traefik
  tls:
    - secretName: mosquitto-tls-cert
      hosts:
        - mosquitto.new.travisprosser.com
  rules:
    - host: mosquitto.home-server-k3s.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mosquitto
                port:
                  number: 1883
    - host: mosquitto.new.travisprosser.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mosquitto
                port:
                  number: 1883
